# etherealpost

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
etherealpost/: Cargo.toml
etherealpost/src/: lib.rs
etherealpost/src/battlenet/: auctions.rs  bonus.rs  curve.rs
etherealpost/src/parse/: item_level.rs  mod.rs  summary.rs
etherealpost/src/utils/: stats.rs
etherealpost/src/wow/: data_tables.rs
etherealpost/src/wow/data_tables/: battle_pet_species.rs  curve_points.rs  item.rs  item_bonus.rs  item_effect.rs  item_sparse.rs  mod.rs
etherealpost_tools/: Cargo.toml
src/: lib.rs  main.rs
src/battlenet/: auctions.rs
src/utils/: stats.rs
