[package]
name = "etherealpost"
version = "0.1.0"
authors = ["Seputaes <seputaes@sep.gg>"]
license = "MIT OR Apache-2.0"
description = "Analyzes data from the World of Warcraft Auction House"
edition = "2018"
repository = "https://github.com/seputaes/etherealpost"
keywords = ["blizzard", "battlenet", "world-of-warcraft", "wow", "warcraft"]
categories = ["api-bindings", "games"]
readme = "README.md"

[dependencies]

[dev-dependencies]
approx = "0.3.2"

[[bin]]
doc = false
name = "etherealpost"